--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -106,6 +106,8 @@
     padding: 1rem 2.5rem;
     width: 100vw;
     height: fit-content;
+    margin-left: 0;
+    margin-right: 0;
   }
   #hero div {
     display: flex;
